// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<ButtonGroup>
  <div
    className="md-button-group-wrapper"
    data-round={false}
    data-separation="none"
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example A
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-1"
    />
    <ButtonPill
      key="1"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-2"
    />
    <ButtonPill
      key="2"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
  </div>
</ButtonGroup>
`;

exports[`<ButtonPill /> snapshot should match snapshot when provided a className 1`] = `
<ButtonGroup
  className="test-example-class"
>
  <div
    className="md-button-group-wrapper test-example-class"
    data-round={false}
    data-separation="none"
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example A
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-1"
    />
    <ButtonPill
      key="1"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-2"
    />
    <ButtonPill
      key="2"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
  </div>
</ButtonGroup>
`;

exports[`<ButtonPill /> snapshot should match snapshot when spaced 1`] = `
<ButtonGroup
  spaced={true}
>
  <div
    className="md-button-group-wrapper"
    data-round={false}
    data-separation="none"
    data-spaced={true}
  >
    <ButtonPill
      key="0"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example A
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-1"
    />
    <ButtonPill
      key="1"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-2"
    />
    <ButtonPill
      key="2"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
  </div>
</ButtonGroup>
`;

exports[`<ButtonPill /> snapshot should match snapshot with round 1`] = `
<ButtonGroup
  round={true}
>
  <div
    className="md-button-group-wrapper"
    data-round={true}
    data-separation="none"
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example A
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-1"
    />
    <ButtonPill
      key="1"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-2"
    />
    <ButtonPill
      key="2"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
  </div>
</ButtonGroup>
`;

exports[`<ButtonPill /> snapshot should match snapshot with seperation 1`] = `
<ButtonGroup
  separation="none"
>
  <div
    className="md-button-group-wrapper"
    data-round={false}
    data-separation="none"
    data-spaced={false}
  >
    <ButtonPill
      key="0"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example A
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-1"
    />
    <ButtonPill
      key="1"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
    <div
      className="md-button-group-separator"
      key="separator-2"
    />
    <ButtonPill
      key="2"
    >
      <FocusRing
        focusRingClass="md-button-pill-focus-ring"
      >
        <button
          className="md-button-pill-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-outline={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <div>
            Example B
          </div>
        </button>
      </FocusRing>
    </ButtonPill>
  </div>
</ButtonGroup>
`;
